# Virtual-Drummer

./: .gitignore  README.md
socket-plugin/: CMakeLists.txt
socket-plugin/resource/: plug_editor.uidesc
socket-plugin/source/: plug_cids.h  plug_controller.cpp  plug_controller.h  plug_entry.cpp  plug_processor.cpp  plug_processor.h  version.h
unity-project/Assets/Models/: Drum_Stick.skp  LowPoly.blend  LowPoly2.blend  LowPoly2.blend1
unity-project/Assets/Scenes/: SampleScene.unity
unity-project/Assets/Scripts/: CameraManager.cs  DrummerAnimator.cs  MidiMapper.cs  ShowDataOnScreen.cs  TestMidiSender.cs  UnitySocketServer.cs
unity-project/Builds/unity-project_Data/: boot.config  globalgamemanagers  globalgamemanagers.assets  level0  resources.assets
unity-project/ProjectSettings/: ProjectSettings.asset
unity-project/UserSettings/Layouts/: default-2022.dwlt
